--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
     "clsx": "latest",
+    "material-table": "^1.55.0",
     "react": "latest",
     "react-dom": "latest",
     "react-router-dom": "^5.1.2",
